--- a/account.html
+++ b/account.html
@@ -1,148 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Your Account | Kaya</title>
-  <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow" />
+  <title>Your Account | Kaya Botswana</title>
+  <link rel="icon" href="images/Kaya.jpg" type="image">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.googleapis.com https://script.google.com;">
 
-  <!-- Bootstrap -->
+  <!-- Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/signup.css"> 
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
-<link rel="stylesheet" href="css/background.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/signup.css">
   <style>
-    body {
-      background-image: url('images/bg-2.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
-    main, footer {
+    main,
+    footer {
       color: #fff;
       text-align: center;
       max-width: 100%;
       overflow-x: hidden;
     }
-    #button2 {
-      background-color: #101C2C;
-      color: #fff;
-    }
-    #button2:hover {
-      background-color: #B58E5A;
-      color: #fff;
-    }
+
     #price {
       color: #B58E5A;
     }
   </style>
-
-
 </head>
+
 <body>
 
-<header>
-  <!-- Nav Bar -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link active" href="account.html">Your Account
-          </a></li>
-        </ul>
+  <header>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Kaya.png" alt="Kaya Botswana Logo" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link active" href="account.html">Your Account
+              </a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Account Info -->
+  <div class="form-wrapper">
+    <div class="form-container text-center">
+      <img src="images/Kaya.png" alt="Kaya Botswana Logo" class="img-fluid mb-3" style="max-height: 80px;">
+      <h2 class="title">Your Account<span style="color:#fd7e14;">.</span></h2>
+      <div id="userInfo" class="mt-4">
+        <p><strong>First Name:</strong> <span id="firstName">Loading...</span></p>
+        <p><strong>Last Name:</strong> <span id="lastName">Loading...</span></p>
+        <p><strong>Email:</strong> <span id="email">Loading...</span></p>
+      </div>
+      <div class="d-grid mt-4">
+        <button id="logoutBtn" class="btn btn-orange">Log Out</button>
       </div>
     </div>
-  </nav>
-</header>
-
-<!-- Account Info -->
-<div class="form-wrapper">
-  <div class="form-container text-center">
-    <img src="images/Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
-    <h2 class="title">Your Account<span style="color:#fd7e14;">.</span></h2>
-    <div id="userInfo" class="mt-4">
-      <p><strong>First Name:</strong> <span id="firstName">Loading...</span></p>
-      <p><strong>Last Name:</strong> <span id="lastName">Loading...</span></p>
-      <p><strong>Email:</strong> <span id="email">Loading...</span></p>
-    </div>
-    <div class="d-grid mt-4">
-      <button id="logoutBtn" class="btn btn-orange">Log Out</button>
-    </div>
   </div>
-</div>
 
-<!-- Footer -->
-<footer>
-  
-  <p>&copy; 2025 Kaya Botswana</p>
-</footer>
+  <!-- Footer -->
+  <footer>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <p>&copy; 2025 Kaya Botswana</p>
+  </footer>
 
-<!-- Firebase SDK -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
-  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCB84FTOdVHbdMKSBLqKZ_YvZYl_QSVZek",
-    authDomain: "kahiyaco.firebaseapp.com",
-    projectId: "kahiyaco",
-    storageBucket: "kahiyaco.firebasestorage.app",
-    messagingSenderId: "1034759752393",
-    appId: "1:1034759752393:web:659872d47eef97c251db18",
-    measurementId: "G-ZB13WQQKGF"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
-
-  const firstNameEl = document.getElementById('firstName');
-  const lastNameEl = document.getElementById('lastName');
-  const emailEl = document.getElementById('email');
-  const logoutBtn = document.getElementById('logoutBtn');
-
-  onAuthStateChanged(auth, async (user) => {
-    if (user) {
-      const docRef = doc(db, "users", user.uid);
-      const docSnap = await getDoc(docRef);
-
-      if (docSnap.exists()) {
-        const data = docSnap.data();
-        firstNameEl.textContent = data.firstName || "N/A";
-        lastNameEl.textContent = data.lastName || "N/A";
-        emailEl.textContent = data.email || user.email;
-      } else {
-        alert("No user data found.");
-      }
-    } else {
-      alert("You are not logged in. Redirecting to login...");
-      window.location.href = "login.html";
-    }
-  });
-
-  logoutBtn.addEventListener("click", async () => {
-    await signOut(auth);
-    window.location.href = "login.html";
-  });
-</script>
+  <script type="module" src="scripts/account.js"></script>
 
 </body>
+
 </html>
