--- a/feedback.html
+++ b/feedback.html
@@ -1,82 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Feedback | Kaya</title>
-  <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://kayabw.org/feedback.html" />
+  <title>Customer Feedback | Kaya Botswana</title>
+  <meta name="description"
+    content="We value your thoughts. Share your feedback with Kaya Botswana and help us improve our digital marketing services." />
+  <link rel="icon" href="images/Kaya.jpg" type="image">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.googleapis.com https://script.google.com;">
 
-  <!-- Bootstrap & Icons -->
+  <!-- Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/signup.css">
-   <style>
-  body {
-    background-image: url('images/bg-2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-</style>
 </head>
 
 <body>
-<header>
-  <!-- Navbar -->
+  <header>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-          <li class="nav-item"><a class="nav-link active" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link" href="account.html">Your Account
-          </a></li>
-        </ul>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Kaya.png" alt="Kaya Botswana Logo" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="nav-link active" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="account.html">Your Account
+              </a></li>
+          </ul>
+        </div>
       </div>
+    </nav>
+  </header>
+
+  <!-- Feedback Form -->
+  <div class="form-wrapper">
+    <div class="form-container text-center">
+      <img src="images/Kaya.png" alt="Kaya Botswana Logo" class="img-fluid mb-3" style="max-height: 80px;">
+      <h2 class="title">Share your feedback<span style="color:#fd7e14;">.</span></h2>
+      <p class="mt-2">We appreciate your thoughts and suggestions!</p>
+
+      <form id="feedbackForm">
+        <div class="mb-3">
+          <input type="email" class="form-control" id="feedbackEmail" placeholder="Your email" required>
+        </div>
+        <div class="mb-3">
+          <textarea class="form-control" id="feedbackMessage" rows="5" placeholder="Your feedback" required></textarea>
+        </div>
+        <div class="d-grid">
+          <button type="submit" class="btn btn-orange">Submit Feedback</button>
+        </div>
+      </form>
+      <p id="feedbackMessageResult" class="mt-3"></p>
     </div>
-  </nav>
-</header>
-
-<!-- Feedback Form -->
-<div class="form-wrapper">
-  <div class="form-container text-center">
-    <img src="images/Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
-    <h2 class="title">Share your feedback<span style="color:#fd7e14;">.</span></h2>
-    <p class="mt-2">We appreciate your thoughts and suggestions!</p>
-
-    <form id="feedbackForm">
-      <div class="mb-3">
-        <input type="email" class="form-control" id="feedbackEmail" placeholder="Your email" required>
-      </div>
-      <div class="mb-3">
-        <textarea class="form-control" id="feedbackMessage" rows="5" placeholder="Your feedback" required></textarea>
-      </div>
-      <div class="d-grid">
-        <button type="submit" class="btn btn-orange">Submit Feedback</button>
-      </div>
-    </form>
   </div>
-</div>
-<!--Bootstrap JS-->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<!-- Footer -->
-<footer class="text-center py-4">
-  
-  <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
-</footer>
-<script src="scripts/feedback.js"></script>
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <!-- Footer -->
+  <footer class="text-center py-4">
+
+    <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
+  </footer>
+  <script src="scripts/feedback.js"></script>
 </body>
+
 </html>
