--- a/index.html
+++ b/index.html
@@ -1,113 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Kaya Botswana is a leading digital marketing agency offering expert strategies, insights, and solutions to help your business grow online." />
-  <meta name="keywords" content="Digital Marketing, Botswana, SEO, Social Media, Branding, Newsletter, Kaya" />
-  <meta name="author" content="Kaya Botswana" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <meta property="og:title" content="Kaya Botswana | Digital Marketing Agency" />
-  <meta property="og:description" content="Subscribe to our newsletter for the latest digital marketing insights and strategies." />
-  <meta property="og:image" content="images/Kaya.png" />
-  <meta property="og:url" content="https://kayabw.org/" />
-  <meta property="og:type" content="website" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://kayabw.org/index.html" />
 
-  
-  <title>Kaya | Home</title>
+  <!-- Primary Meta Tags -->
+  <title>Kaya Botswana | Leading Digital Marketing Agency</title>
+  <meta name="title" content="Kaya Botswana | Leading Digital Marketing Agency">
+  <meta name="description"
+    content="Kaya Botswana is a leading digital marketing agency offering expert strategies, SEO, social media management, and branding solutions to help your business grow online." />
+  <meta name="keywords"
+    content="Digital Marketing Botswana, SEO services Botswana, Social Media Marketing, Branding Agency Botswana, Kaya Botswana" />
+  <meta name="author" content="Kaya Botswana" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kayabw.org/" />
+  <meta property="og:title" content="Kaya Botswana | Digital Marketing Agency" />
+  <meta property="og:description"
+    content="Partner with Kaya Botswana for expert digital marketing strategies and business growth." />
+  <meta property="og:image" content="https://kayabw.org/images/Kaya.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://kayabw.org/" />
+  <meta property="twitter:title" content="Kaya Botswana | Digital Marketing Agency" />
+  <meta property="twitter:description"
+    content="Partner with Kaya Botswana for expert digital marketing strategies and business growth." />
+  <meta property="twitter:image" content="https://kayabw.org/images/Kaya.png" />
+
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.googleapis.com https://script.google.com;">
+
   <link rel="icon" href="images/Kaya.jpg" type="image">
-  
+
   <!-- Bootstrap & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/index.css">
-  <style>
-   body {
-    background-image: url('images/bg-2.jpg') !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    background-position: center center !important;
-  }
-
-    </style>
 </head>
 
 <body>
 
-<!-- Navbar -->
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Kaya.png" alt="Kaya Botswana Logo" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="account.html">Your Account
+              </a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Main Content Section -->
+  <section class="main-section">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link" href="account.html">Your Account
-          </a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+      <div class="row align-items-center">
+        <!-- Logo on the left -->
+        <div class="col-md-4 text-center mb-4 mb-md-0">
+          <img src="images/Kaya.png" alt="Kaya Botswana Full Logo" id="KayaIN" style="max-height: 190px;">
+        </div>
 
-<!-- Main Content Section -->
-<section class="main-section">
-  <div class="container">
-    <div class="row align-items-center">
-      <!-- Logo on the left -->
-      <div class="col-md-4 text-center mb-4 mb-md-0">
-        <img src="images/Kaya.png" alt="Kaya Logo" id="KayaIN" style="max-height: 190px;">
-      </div>
+        <!-- Paragraph & Newsletter on the right -->
+        <div class="col-md-8">
+          <h2 class="newsletter-heading">Subscribe to our Newsletter</h2>
+          <p class="mb-4">
+            By subscribing to our newsletter, you’ll gain timely insights, curated strategies, and exclusive updates
+            that empower your business to stay competitive in a fast-evolving market.<br> <br> Join us, and let your
+            brand achieve its full potential with a trusted partner by your side.
+          </p>
 
-      <!-- Paragraph & Newsletter on the right -->
-      <div class="col-md-8">
-        <h2 class="newsletter-heading">Subscribe to our Newsletter</h2>
-        <p class="mb-4">
-          By subscribing to our newsletter, you’ll gain timely insights, curated strategies, and exclusive updates that empower your business to stay competitive in a fast-evolving market.<br> <br> Join us, and let your brand achieve its full potential with a trusted partner by your side.
-        </p>
+          <!-- Newsletter Form -->
+          <form id="newsletterForm" class="row g-2">
+            <div class="col-sm-8">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email" required>
+            </div>
+            <div class="col-sm-4">
+              <button type="submit" class="btn read-more-btn w-100">Subscribe</button>
+            </div>
+          </form>
+          <p id="message" class="mt-3"></p>
 
-        <!-- Newsletter Form -->
-        <form id="newsletterForm" class="row g-2">
-          <div class="col-sm-8">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email" required>
+          <!-- Read More Button -->
+          <div class="mt-4">
+            <a href="pricing.html" class="btn read-more-btn">Read More</a>
           </div>
-          <div class="col-sm-4">
-            <button type="submit" class="btn read-more-btn w-100">Subscribe</button>
-          </div>
-        </form>
-        <p id="message" class="mt-3"></p>
-
-        <!-- Read More Button -->
-        <div class="mt-4">
-          <a href="pricing.html" class="btn read-more-btn">Read More</a>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  <section class="reviews-section">
+    <div class="container">
+      <h2 class="section-title">Client Stories</h2>
+      <div class="review-card text-center">
+        <div class="quote-icon">"</div>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        <p class="review-text">
+          "Really enjoyed my 3-month trial with Kaya Botswana! As my first time trying a social media manager, I was
+          impressed. They were super attentive and always posted everything on time. I asked for increased reach, and
+          that's exactly what I got, so many new people viewing my profile! The stories and content they posted were
+          perfect for boosting engagement with my community. I genuinely have no complaints. It was a really great
+          experience and I'd definitely recommend giving them a try!"
+        </p>
+        <div class="review-author">— Lisa Matsoma</div>
+      </div>
+    </div>
+  </section>
 
-<script type="text/javascript" src="scripts/animation.js"></script>
- 
-<script type="module" src="scripts/newsletter.js"></script>
-<!-- Footer -->
-<footer class="text-center py-4">
-  
-  <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
-</footer>
+  <script type="text/javascript" src="scripts/animation.js"></script>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="scripts/newsletter.js"></script>
+  <!-- Footer -->
+  <footer class="text-center py-4">
+
+    <p class="mt-2 mb-0">&copy; 2025 Kaya Botswana</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
