--- a/pricing.html
+++ b/pricing.html
@@ -2,211 +2,222 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore Kaya Botswana's digital marketing packages. Find the perfect plan for your business, from startups to established brands. Transparent pricing and expert solutions." />
-  <meta name="keywords" content="Digital Marketing, Pricing, Packages, Botswana, SEO, Social Media, Kaya" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://kayabw.org/pricing.html" />
+
+  <!-- Primary Meta Tags -->
+  <title>Kaya Botswana | Digital Marketing Packages & Pricing</title>
+  <meta name="title" content="Kaya Botswana | Digital Marketing Packages & Pricing">
+  <meta name="description"
+    content="Discover affordable digital marketing packages for every business size. Transparent pricing for SEO, social media, and more from Kaya Botswana." />
+  <meta name="keywords"
+    content="Digital Marketing Packages, SEO Pricing Botswana, Social Media Marketing Cost, Kaya Botswana Pricing" />
   <meta name="author" content="Kaya Botswana" />
-<meta property="og:title" content="Kaya Botswana | Digital Marketing Packages & Pricing" />
-  <meta property="og:description" content="Discover affordable digital marketing packages for every business size. Transparent pricing from Kaya Botswana." />
-  <meta property="og:image" content="images/Kaya.png" />
-  <meta property="og:url" content="https://kayabw.org/pricing.html" />
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kayabw.org/pricing.html" />
+  <meta property="og:title" content="Kaya Botswana | Digital Marketing Packages & Pricing" />
+  <meta property="og:description"
+    content="Transparent pricing for expert digital marketing services. Find the perfect plan for your growth." />
+  <meta property="og:image" content="https://kayabw.org/images/Kaya.png" />
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://kayabw.org/pricing.html" />
+  <meta property="twitter:title" content="Kaya Botswana | Digital Marketing Packages & Pricing" />
+  <meta property="twitter:description"
+    content="Transparent pricing for expert digital marketing services. Find the perfect plan for your growth." />
+  <meta property="twitter:image" content="https://kayabw.org/images/Kaya.png" />
 
-     <!-- Other head elements -->
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.googleapis.com https://script.google.com https://open.er-api.com;">
+
+  <link rel="icon" href="images/Kaya.jpg" type="image">
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<!-- BootStrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Add inside <head> before your styles -->
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/font.css">
-<style>
-   body {
-    background-image: url('images/bg-2.jpg') !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    background-position: center center !important;
-  }
-</style>
-<link rel="stylesheet" href="css/pricing.css">  
-
-<title>Kaya | Pricing </title>
-<link rel="icon" href="images/Kaya.jpg" type="image">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/font.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/pricing.css">
 </head>
+
 <body>
-<header> 
-     <!-- Nav Bar -->
+  <header>
+    <!-- Nav Bar -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-black">  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="signup.html">Sign Up</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="login.html">login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="feedback.html">Feedback</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current"page" href="pricing.html">Pricing</a>
-        </li> 
-        <li class="nav-item">
-          <a class="nav-link" href="account.html">Your Account</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-</header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Kaya.png" alt="Kaya Botswana Logo" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="signup.html">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="feedback.html">Feedback</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current"page" href="pricing.html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="account.html">Your Account</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-<main>
+  <main>
 
 
     <!-- Package Deals -->
-<!-- Replace your package section inside <main> with the following layout -->
+    <!-- Replace your package section inside <main> with the following layout -->
 
-<div id="package">
-  <div>
-    <h1>Our Packages</h1>
-    <p>These Packages Provide Sufficient Features For You.</p>
-  </div>
-  <div class="container my-4">
-    <label for="currencySelector" class="form-label">Choose Currency:</label>
-    <select id="currencySelector" class="form-select" style="max-width: 200px; display: inline-block;">
-      <option value="BWP" selected>Botswana Pula (BWP)</option>
-      <option value="USD">US Dollar (USD)</option>
-      <option value="EUR">Euro (EUR)</option>
-      <option value="ZAR">South African Rand (ZAR)</option>
-    </select>
-  </div>
-
-  <!-- Package Cards -->
-  <div class="container">
-    <!-- Launch Pad -->
-    <div class="row justify-content-center align-items-center package-card mb-4">
-      <div class="col-md-7 col-12">
-        <h2>Launch Pad</h2>
-        <p><b>Perfect for startups or small businesses testing digital marketing.</b></p>
-        <p>Monthly Analytics Report<br>Social Media Management & Setup (Facebook & Instagram)<br>1 Monthly Ad Campaign On Social Media Platforms <br>8 Posts A Month (2 Platforms)</p>
-        <p id="price">P810</p>
-        <div class="d-grid gap-2 mt-2">
-  <a href="mailto:botswanakaya@gmail.com?subject=Launch Pad Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
-</div>
+    <div id="package">
+      <div>
+        <h1>Our Packages</h1>
+        <p>These Packages Provide Sufficient Features For You.</p>
       </div>
-      <div class="col-md-5 col-12 text-center">
-        <img src="images/launch.png" alt="Launch Pad" class="img-fluid" style="max-width: 80%; height: auto;">
+      <div class="container my-4">
+        <label for="currencySelector" class="form-label">Choose Currency:</label>
+        <select id="currencySelector" class="form-select" style="max-width: 200px; display: inline-block;">
+          <option value="BWP" selected>Botswana Pula (BWP)</option>
+          <option value="USD">US Dollar (USD)</option>
+          <option value="EUR">Euro (EUR)</option>
+          <option value="ZAR">South African Rand (ZAR)</option>
+        </select>
+      </div>
+
+      <!-- Package Cards -->
+      <div class="container">
+        <!-- Launch Pad -->
+        <div class="row justify-content-center align-items-center package-card mb-4">
+          <div class="col-md-7 col-12">
+            <h2>Launch Pad</h2>
+            <p><b>Perfect for startups or small businesses testing digital marketing.</b></p>
+            <p>Monthly Analytics Report<br>Social Media Management & Setup (Facebook & Instagram)<br>1 Monthly Ad
+              Campaign On Social Media Platforms <br>8 Posts A Month (2 Platforms)</p>
+            <p id="price">P810</p>
+            <div class="d-grid gap-2 mt-2">
+              <a href="mailto:botswanakaya@gmail.com?subject=Launch Pad Inquiry" class="btn btn-outline-warning"
+                id="Inquire">Inquire</a>
+            </div>
+          </div>
+          <div class="col-md-5 col-12 text-center">
+            <img src="images/launch.png" alt="Launch Pad digital marketing package" class="img-fluid"
+              style="max-width: 80%; height: auto;">
+          </div>
+        </div>
+
+        <!-- Growth Engine -->
+        <div class="row justify-content-center align-items-center package-card mb-4">
+          <div class="col-md-7 col-12">
+            <h2>Growth Engine</h2>
+            <p><b>Best for established businesses ready to scale.</b></p>
+            <p>Email Marketing<br>Landing Page Optimization<br>Competitor & Audience Analysis<br>PR
+              Management<br>Website Development & Maintenance<br>Weekly Ad Campaigns</p>
+            <p id="price">P3 492</p>
+            <div class="d-grid gap-2 mt-2">
+              <a href="mailto:botswanakaya@gmail.com?subject=Growth Engine Inquiry" class="btn btn-outline-warning"
+                id="Inquire">Inquire</a>
+            </div>
+          </div>
+          <div class="col-md-5 col-12 text-center">
+            <img src="images/growth.png" alt="Growth Engine digital marketing package" class="img-fluid"
+              style="max-width: 80%; height: auto;">
+          </div>
+        </div>
+
+        <!-- Authority Suite -->
+        <div class="row justify-content-center align-items-center package-card mb-4">
+          <div class="col-md-7 col-12">
+            <h2>Authority Suite</h2>
+            <p><b>Perfect for brands aiming to dominate their niche.</b></p>
+            <p>Influencer Collaboration<br>Custom Marketing Funnel<br>Conversion Rate Optimization (CRO)<br>Weekly
+              Analytics Report<br>PR Management<br>Competitor & Audience Analysis<br>Website Development<br>Email
+              Marketing<br> SEO Setup<br>Weekly Ad Campaigns (Facebook/Instagram)</p>
+            <p id="price">P6 340</p>
+            <div class="d-grid gap-2 mt-2">
+              <a href="mailto:botswanakaya@gmail.com?subject=Authority Suite Inquiry" class="btn btn-outline-warning"
+                id="Inquire">Inquire</a>
+            </div>
+          </div>
+          <div class="col-md-5 col-12 text-center">
+            <img src="images/authority.jpg" alt="Authority Suite digital marketing package" class="img-fluid"
+              style="max-width: 80%; height: auto;">
+          </div>
+        </div>
       </div>
     </div>
+    <script src="scripts/exchange.js"></script>
 
-    <!-- Growth Engine -->
-    <div class="row justify-content-center align-items-center package-card mb-4">
-      <div class="col-md-7 col-12">
-        <h2>Growth Engine</h2>
-        <p><b>Best for established businesses ready to scale.</b></p>
-        <p>Email Marketing<br>Landing Page Optimization<br>Competitor & Audience Analysis<br>PR Management<br>Website Development & Maintenance<br>Weekly Ad Campaigns</p>
-        <p id="price">P3 492</p>
-        <div class="d-grid gap-2 mt-2">
-  <a href="mailto:botswanakaya@gmail.com?subject=Growth Engine Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
-</div>
-      </div>
-      <div class="col-md-5 col-12 text-center">
-        <img src="images/growth.png" alt="Growth Engine" class="img-fluid" style="max-width: 80%; height: auto;">
-      </div>
-    </div>
+    <!-- Card -->
 
-    <!-- Authority Suite -->
-    <div class="row justify-content-center align-items-center package-card mb-4">
-      <div class="col-md-7 col-12">
-        <h2>Authority Suite</h2>
-        <p><b>Perfect for brands aiming to dominate their niche.</b></p>
-        <p>Influencer Collaboration<br>Custom Marketing Funnel<br>Conversion Rate Optimization (CRO)<br>Weekly Analytics Report<br>PR Management<br>Competitor & Audience Analysis<br>Website Development<br>Email Marketing<br> SEO Setup<br>Weekly Ad Campaigns (Facebook/Instagram)</p>
-        <p id="price">P6 340</p>
-        <div class="d-grid gap-2 mt-2">
-  <a href="mailto:botswanakaya@gmail.com?subject=Authority Suite Inquiry" class="btn btn-outline-warning" id="Inquire">Inquire</a>
-</div>
-      </div>
-      <div class="col-md-5 col-12 text-center">
-        <img src="images/authority.jpg" alt="Authority Suite" class="img-fluid" style="max-width: 80%; height: auto;">
+    <div id="popup-card" class="card"
+      style="width: 14rem; display: none; position: fixed; bottom: 24px; right: 24px; z-index: 1050;">
+      <img src="images/assistant.jpg" alt="Kaya AI Assistant" class="card-img-top"
+        style="max-height: 90px; object-fit: cover;">
+      <div class="card-body" style="padding: 0.75rem;">
+        <button type="button" class="btn-close" aria-label="Close" style="float: right;"></button>
+        <h6 class="card-title" style="font-size: 1rem;">Feedback?</h6>
+        <p class="card-text" style="font-size: 0.95rem;">Good day, I'm Kaya. Here to listen to your thoughts on us.</p>
+        <a href="feedback.html" class="btn btn-primary btn-sm">Talk To Us</a>
       </div>
     </div>
-  </div>
-</div>
-<script src="scripts/exchange.js"></script>
+    <style>
+      @keyframes fadeOut {
+        from {
+          opacity: 1;
+        }
 
-<!-- Card -->
+        to {
+          opacity: 0;
+        }
+      }
 
-<div id="popup-card" class="card" style="width: 14rem; display: none; position: fixed; bottom: 24px; right: 24px; z-index: 1050;">
-  <img src="images/assistant.jpg" class="card-img-top" alt="Kaya Assistant" style="max-height: 90px; object-fit: cover;">
-  <div class="card-body" style="padding: 0.75rem;">
-    <button type="button" class="btn-close" aria-label="Close" onclick="dismissCard(this)" style="float: right;"></button>
-    <h6 class="card-title" style="font-size: 1rem;">Feedback?</h6>
-    <p class="card-text" style="font-size: 0.95rem;">Good day, I'm Kaya. Here to listen to your thoughts on us.</p>
-    <a href="feedback.html" class="btn btn-primary btn-sm">Talk To Us</a>
-  </div>
-</div>
-<style>
-@keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
-}
-#popup-card {
-  /* Already positioned fixed, bottom left */
-  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
-}
-</style>
+      #popup-card {
+        /* Already positioned fixed, bottom left */
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.18);
+      }
+    </style>
 
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const popupCard = document.getElementById("popup-card");
-  // Show the card
-  popupCard.style.display = "block";
-  // Set a timeout to hide the card after 10 seconds
-  setTimeout(() => {
-    popupCard.style.animation = "fadeOut 0.5s ease-in-out";
-    popupCard.addEventListener("animationend", () => {
-      popupCard.style.display = "none";
-      popupCard.style.animation = "";
-    }, { once: true });
-  }, 10000); // 10 seconds
-});
+    <script src="scripts/popupcard.js"></script>
+    <!-- Page End -->
+  </main>
+  <!--Bootstrap JS-->
 
-// Dismiss card manually with the "Close" button
-function dismissCard(button) {
-  const card = button.closest(".card");
-  card.style.animation = "fadeOut 0.5s ease-in-out";
-  card.addEventListener("animationend", () => {
-    card.style.display = "none";
-    card.style.animation = "";
-  }, { once: true });
-}
-</script>
-<!-- Page End -->
-</main>
-     <!--Bootstrap JS-->
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
 
 
-<!-- Footer -->
-<footer>
+  <!-- Footer -->
+  <footer>
 
-  <a href="#"><i class="fas fa-arrow-up"></i></a>
-  <p>&copy; 2025 Kaya Botswana</p>
-</footer>
-</body> 
+    <a href="#"><i class="fas fa-arrow-up"></i></a>
+    <p>&copy; 2025 Kaya Botswana</p>
+  </footer>
+</body>
 <html>
