--- a/recovery.html
+++ b/recovery.html
@@ -1,68 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Kaya | Recover Password</title>
-  <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow" />
+  <title>Reset Password | Kaya Botswana</title>
+  <link rel="icon" href="images/Kaya.jpg" type="image">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.googleapis.com https://script.google.com;">
 
-  <!-- Bootstrap & Icons -->
+  <!-- Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/signup.css">
-   <style>
-  body {
-    background-image: url('images/bg-2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-</style>
 </head>
 
 <body>
-<header>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
-      </a>
+  <header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Kaya.png" alt="Kaya Botswana Logo" width="50" height="50">
+        </a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Recovery Form -->
+  <div class="form-wrapper">
+    <div class="form-container text-center">
+      <img src="images/Kaya.png" alt="Kaya Botswana Logo" class="img-fluid mb-3" style="max-height: 80px;">
+      <h2 class="title">Reset Password<span style="color:#fd7e14;">.</span></h2>
+      <p class="mt-2">We'll send a password reset link to your email</p>
+
+      <form id="recoveryForm">
+        <div class="mb-3">
+          <input type="email" class="form-control" id="resetEmail" placeholder="Enter your email" required>
+        </div>
+        <div class="d-grid">
+          <button type="submit" class="btn btn-orange">Send Reset Email</button>
+        </div>
+        <p class="mt-3"><a href="login.html">Back to Login</a></p>
+      </form>
+      <p id="recoveryMessage" class="mt-3"></p>
     </div>
-  </nav>
-</header>
-
-<!-- Recovery Form -->
-<div class="form-wrapper">
-  <div class="form-container text-center">
-    <img src="images/Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
-    <h2 class="title">Reset Password<span style="color:#fd7e14;">.</span></h2>
-    <p class="mt-2">We'll send a password reset link to your email</p>
-
-    <form id="recoveryForm">
-      <div class="mb-3">
-        <input type="email" class="form-control" id="resetEmail" placeholder="Enter your email" required>
-      </div>
-      <div class="d-grid">
-        <button type="submit" class="btn btn-orange">Send Reset Email</button>
-      </div>
-      <p class="mt-3"><a href="login.html">Back to Login</a></p>
-    </form>
   </div>
-</div>
 
-<!-- Footer -->
-<footer>
-  
-  <p>&copy; 2025 Kaya Botswana</p>
-</footer>
+  <!-- Footer -->
+  <footer>
 
-<!-- Firebase JS -->
-<script type="module" src="scripts/recovery.js"></script>
+    <p>&copy; 2025 Kaya Botswana</p>
+  </footer>
+
+  <!-- Firebase JS -->
+  <script type="module" src="scripts/recovery.js"></script>
 
 </body>
+
 </html>
