--- a/signup.html
+++ b/signup.html
@@ -1,101 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Kaya | Create Account</title>
-  <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://kayabw.org/signup.html" />
+  <title>Create Account | Kaya Botswana</title>
+  <meta name="description"
+    content="Join Kaya Botswana today. Create an account to start your digital marketing journey and grow your brand with expert solutions." />
+  <link rel="icon" href="images/Kaya.jpg" type="image">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.googleapis.com https://script.google.com;">
 
-  <!-- Bootstrap -->
+  <!-- Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-   <link rel="stylesheet" type="text/css" href="css/signup.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/font.css">
- <style>
-  body {
-    background-image: url('images/bg-2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-</style>
- 
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/signup.css">
 </head>
 
 <body>
 
-<header> 
-     <!-- Nav Bar -->
+  <header>
+    <!-- Nav Bar -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="signup.html">Sign Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link" href="account.html">Your Account
-          </a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<!-- Form -->
-<div class="form-wrapper">
-  <div class="form-container text-center">
-    <div class="mb-4">
-      <img src="images/Kaya.png" alt="Kaya Logo" class="img-fluid mb-3" style="max-height: 80px;">
-      <h2 class="title">Create new account<span style="color:#fd7e14;">.</span></h2>
-      <p class="mt-2">Already a member? <a href="login.html">Log in</a></p>
-    </div>
-
-    <form action="login.html">
-      <div class="row mb-3">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="First name" required>
-        </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Last name" required>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Kaya.png" alt="Kaya Botswana Logo" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="signup.html">Sign Up</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="account.html">Your Account
+              </a></li>
+          </ul>
         </div>
       </div>
+    </nav>
+  </header>
 
-      <div class="mb-3">
-        <input type="email" class="form-control" placeholder="Email" required>
+  <!-- Form -->
+  <div class="form-wrapper">
+    <div class="form-container text-center">
+      <div class="mb-4">
+        <img src="images/Kaya.png" alt="Kaya Botswana Logo" class="img-fluid mb-3" style="max-height: 80px;">
+        <h2 class="title">Create new account<span style="color:#fd7e14;">.</span></h2>
+        <p class="mt-2">Already a member? <a href="login.html">Log in</a></p>
       </div>
 
-      <div class="mb-3">
-        <input type="password" class="form-control" placeholder="Password" required>
-      </div>
+      <form id="signupForm">
+        <div class="row mb-3">
+          <div class="col">
+            <input type="text" id="firstName" class="form-control" placeholder="First name" required>
+          </div>
+          <div class="col">
+            <input type="text" id="lastName" class="form-control" placeholder="Last name" required>
+          </div>
+        </div>
 
-      <div class="d-grid">
-        <button type="submit" class="btn btn-orange">Create account</button>
-      </div>
-    </form>
+        <div class="mb-3">
+          <input type="email" id="email" class="form-control" placeholder="Email" required>
+        </div>
+
+        <div class="mb-3">
+          <input type="password" id="password" class="form-control" placeholder="Password" required>
+        </div>
+
+        <div class="d-grid">
+          <button type="submit" class="btn btn-orange">Create account</button>
+        </div>
+      </form>
+      <p id="signupMessage" class="mt-3"></p>
+    </div>
   </div>
-</div>
   <!-- Page End  -->
 
-<!-- Footer -->
-<footer>
-  
-  <p>&copy; 2025 Kaya Botswana</p>
-</footer>
+  <!-- Footer -->
+  <footer>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <p>&copy; 2025 Kaya Botswana</p>
+  </footer>
 
-<script src="scripts/signup.js" type="module"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="scripts/signup.js" type="module"></script>
 </body>
+
 </html>
